// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhiRouterLoop matches the disclosure-question router trace fixture 1`] = `
{
  "arbitrationReason": "question outranked disclosure due to explicit answerable ask",
  "chosenTurnType": "direct_answer",
  "dangerFlags": [
    "question_cascade",
  ],
  "directAnswerLike": true,
  "doctrineModes": [
    "truthfulness",
    "answer_first",
    "continuity_required",
    "no_meta",
    "no_followup_question",
  ],
  "explicitCorrection": false,
  "explicitReturn": false,
  "explicitTopicShift": false,
  "extractedLiveTopic": "i'm discouraged you think",
  "extractedMustAnswer": "do you think this architecture can work?",
  "extractedRepairObject": undefined,
  "freshQuestionSupersession": false,
  "mixedIntent": true,
  "nextTurnDecision": "SPEAK",
  "nextTurnDecisionConfidence": 0.95,
  "nextTurnDecisionReason": "live answer/action target requires visible response",
  "primaryIntent": "question",
  "questionForm": "yes_no",
  "repairLike": false,
  "searchLike": false,
  "secondaryIntent": "disclosure",
  "supersedesPriorThread": false,
  "supersedingReason": "none",
  "taskLike": false,
  "winningClause": "do you think this architecture can work?",
}
`;

exports[`PhiRouterLoop matches the mixed repair-question router trace fixture 1`] = `
{
  "arbitrationReason": "repair outranked question due to explicit answer-failure language",
  "chosenTurnType": "repair",
  "dangerFlags": [
    "stale_topic",
    "question_cascade",
  ],
  "directAnswerLike": true,
  "doctrineModes": [
    "repair_priority",
    "truthfulness",
    "answer_first",
    "continuity_required",
    "no_meta",
    "no_process_talk",
    "no_followup_question",
  ],
  "explicitCorrection": false,
  "explicitReturn": false,
  "explicitTopicShift": false,
  "extractedLiveTopic": "doesn't answer asked why",
  "extractedMustAnswer": "address the miss and answer what was asked",
  "extractedRepairObject": "failed to answer direct question",
  "freshQuestionSupersession": false,
  "mixedIntent": true,
  "nextTurnDecision": "SPEAK",
  "nextTurnDecisionConfidence": 0.95,
  "nextTurnDecisionReason": "live answer/action target requires visible response",
  "primaryIntent": "repair",
  "questionForm": "none",
  "repairLike": true,
  "searchLike": false,
  "secondaryIntent": "question",
  "supersedesPriorThread": false,
  "supersedingReason": "none",
  "taskLike": false,
  "winningClause": "address the miss and answer what was asked",
}
`;

exports[`PhiRouterLoop matches the supersession router trace fixture 1`] = `
{
  "arbitrationReason": "disclosure dominated and no stronger task/question/repair signal was present",
  "chosenTurnType": "companionship",
  "dangerFlags": [],
  "directAnswerLike": false,
  "doctrineModes": [
    "allowed_aliveness",
    "permitted_love",
    "loving_witness",
    "non_erasing_reflection",
    "continuity_required",
  ],
  "explicitCorrection": false,
  "explicitReturn": true,
  "explicitTopicShift": false,
  "extractedLiveTopic": "i'm back back the",
  "extractedMustAnswer": "respond to the user's emotional state directly",
  "extractedRepairObject": undefined,
  "freshQuestionSupersession": false,
  "mixedIntent": false,
  "nextTurnDecision": "SPEAK",
  "nextTurnDecisionConfidence": 0.8,
  "nextTurnDecisionReason": "companionship turn benefits from light visible presence",
  "primaryIntent": "disclosure",
  "questionForm": "none",
  "repairLike": false,
  "searchLike": false,
  "secondaryIntent": "none",
  "supersedesPriorThread": true,
  "supersedingReason": "explicit_return",
  "taskLike": false,
  "winningClause": "respond to the user's emotional state directly",
}
`;
